# polyflip

./: CMakeLists.txt
src/: Polygon.cpp  Polygon.hpp  main.cpp
